# path-tracing-cpp

./: .gitignore  CMakeLists.txt  LICENSE  MAINPAGE.md  README.md  dconfig  imgui.ini  ptrace
assets/: .1000samples_firstsampl.png.~undo-tree~  acne.scn  cornell.scn  covid.scn  cube.scn  cup.scn  default.scn  default_new_format.scn  dft.scn  dft2.scn  dft_new_format2.scn  empty.scn  fucked.scn  girl.scn  nosphere.scn  sphere_center.scn  teapot_with_light.scn  teapot_with_spheres.scn
assets/covid/: SARS_CoV_2_Vaccine.mtl
assets/cup/: coffee_cup_readme.txt
assets/girl/: girl_complete_03.mtl
assets/katana/: Blade_Dif.tga  Blade_Normal.tga  Blade_Spec.tga  Gold_Normal.tga  Handle_Bump.tga  Handle_Dif.tga  Handle_Normal.tga  katana.mtl
docs/: AABB_8h_source.html  Application_8h_source.html  AssetLoader_8h_source.html  BLAS_8h_source.html  BSDF_8h_source.html  BVH_8h_source.html  Box_8h_source.html  Camera_8h_source.html  Constants_8h_source.html  ElementaryFunctions_8h_source.html  GeometricFunctions_8h_source.html  Hashes_8h_source.html  HitPayload_8h_source.html  IHittable_8h_source.html  ImageSaver_8h_source.html  Image_8h_source.html  LAMath_8h_source.html  Light_8h_source.html  Material_8h_source.html  Matrix3_8h_source.html  Matrix4_8h_source.html  MatrixCommon_8h_source.html  Mesh_8h_source.html  ModelInstance_8h_source.html  Model_8h_source.html  NonHittable_8h_source.html  Polygon_8h_source.html  Ray_8h_source.html  Renderer_8h_source.html  Sampling_8h_source.html  Scene_8h_source.html  Sphere_8h_source.html  TLAS_8h_source.html  Texture_8h_source.html  Timer_8h_source.html  Transform_8h_source.html  Triangle_8h_source.html  TrigonometricFunctions_8h_source.html  Types_8h_source.html  Utilities_8hpp_source.html  (+247 more)
docs/html/: _a_a_b_b_8h_source.html  _acceleration_structure_8h_source.html  _application_8h_source.html  _b_s_d_f_8cpp_source.html  _b_s_d_f_8h_source.html  _b_v_h_node_8h_source.html  _camera_8cpp_source.html  _camera_8h_source.html  _constants_8h_source.html  _entrypoint_8cpp_source.html  _geometric_functions_8h_source.html  _hit_payload_8h_source.html  _hittable_object_8h_source.html  _image_8cpp_source.html  _image_8h_source.html  _light_8h_source.html  _material_8h_source.html  _mesh_8h_source.html  _non_hittable_8h_source.html  _polygon_8h_source.html  _ray_8h_source.html  _renderer_8cpp_source.html  _renderer_8h_source.html  _scene_8h_source.html  _timer_8h_source.html  _utilities_8hpp_source.html  _value_pointer_8h_source.html  _vector2_8h_source.html  _vector4_8h_source.html  annotated.html  class_acceleration_structure-members.html  class_acceleration_structure.html  class_application-members.html  class_application.html  class_b_s_d_f-members.html  class_b_s_d_f.html  class_camera-members.html  class_camera.html  class_hittable_object-members.html  class_hittable_object.html  (+45 more)
docs/latex/: _a_a_b_b_8h_source.tex  _acceleration_structure_8cpp_source.tex  _acceleration_structure_8h_source.tex  _application_8cpp_source.tex  _application_8h_source.tex  _b_s_d_f_8cpp_source.tex  _b_s_d_f_8h_source.tex  _b_v_h_node_8h_source.tex  _box_8h_source.tex  _camera_8cpp_source.tex  _camera_8h_source.tex  _constants_8h_source.tex  _elementary_functions_8h_source.tex  _entrypoint_8cpp_source.tex  _geometric_functions_8h_source.tex  _hashes_8h_source.tex  _hit_payload_8h_source.tex  _hittable_object_8h_source.tex  _image_8cpp_source.tex  _image_8h_source.tex  _light_8h_source.tex  _material_8h_source.tex  _math_8h_source.tex  _mesh_8h_source.tex  _model_8h_source.tex  _non_hittable_8h_source.tex  _polygon_8h_source.tex  _ray_8h_source.tex  _renderer_8cpp_source.tex  _renderer_8h_source.tex  _scene_8h_source.tex  _sphere_8h_source.tex  _timer_8h_source.tex  _triangle_8h_source.tex  _trigonometric_functions_8h_source.tex  _utilities_8hpp_source.tex  _value_pointer_8h_source.tex  _vector2_8h_source.tex  _vector3_8h_source.tex  _vector4_8h_source.tex  (+50 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+17 more)
examples/: CMakeLists.txt
examples/acceleration/: CMakeLists.txt  acceleration.cpp
examples/boxes/: CMakeLists.txt  boxes.cpp  imgui.ini
examples/imgui_image/: CMakeLists.txt  imgui.ini  imgui_image.cpp
examples/imgui_simple/: CMakeLists.txt  imgui.cpp  imgui.ini  imgui_simple.cpp
examples/red_sphere/: CMakeLists.txt  imgui.ini  red_sphere.cpp
examples/red_texture/: CMakeLists.txt  imgui.ini  red_texture.cpp
examples/triangle/: CMakeLists.txt  imgui.ini  triangle.cpp
examples/with_the_lights_out/: CMakeLists.txt  imgui.ini  with_the_lights_out.cpp
glad/: CMakeLists.txt
glad/src/: glad.c
glfw-3.4/: cmake_uninstall.cmake
glfw-3.4/docs/: Doxyfile
glfw-3.4/src/: glfw3.pc
src/: AABB.h  AccelerationStructure.cpp  AccelerationStructure.h  Application.cpp  Application.h  BSDF.cpp  BSDF.h  BVHNode.h  BXDF.cpp  BXDF.h  Box.h  Camera.cpp  Camera.h  Entrypoint.cpp  HitPayload.h  Image.cpp  Image.h  Light.h  Material.h  Primitive.h  Ray.h  Renderer.cpp  Renderer.h  Scene.h  Sphere.h  Texture.h  Timer.h  Triangle.h  Utilities.hpp  dconfig
src/acceleration/: AABB.h  BLAS.h  BVH.h  BVHNode.h  TLAS.h
src/assets/: AssetLoader.cpp  AssetLoader.h  Mesh.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h
src/hittable/: Box.h  HittableObject.h  IHittable.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  NonHittable.h  Polygon.cpp  Polygon.h  Sphere.h  Triangle.h
src/image/: Image.cpp  Image.h  (+2 more)
(+258 files in other folders)
